config/testdata/router_config_virtual_service.yml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: service.dubbo.apache.org/v1alpha1
kind: VirtualService
metadata:
  name: demo-route
spec:
  hosts:
    - demo  #  统一定义为应用名
  dubbo:
    - service:
        - exact: com.taobao.hsf.demoService:1.0.0
        - exact: com.taobao.hsf.demoService:2.0.0
      routedetail:
        - name: sayHello-String-method-route
          match:
            - method:
                name_match:
                  exact: "sayHello"
          #                  argp:
          #                    - string
          route:
            - destination:
                host: demo
                subset: v1
              fallback:
                destination:
                  host: demo
                  subset: v2
                fallback:
                  destination:
                    host: demo
                    subset: v3

        - name: sayHello-method-route
          match:
            - method:
                name_match:
                  exact: "s-method"
          route:
            - destination:
                host: demo
                subset: v2
              fallback:
                destination:
                  host: demo
                  subset: v3
        - name: some-method-route
          match:
            - method:
                name_match:
                  exact: "some-method"
          route:
            - destination:
                host: demo
                subset: v4

#        - name: interface-route
#          route:
#            - destination:
#              host: demo
#              subset: v3
        - name: final
          match:
            - method:
                name_match:
                  exact: "GetUser"

          route:
            - destination:
                host: demo
                subset: v1
              fallback:
                destination:
                  host: demo
                  subset: v2
                fallback:
                  destination:
                    host: demo
                    subset: v3
            - destination:
                host: demo
                subset: v3
              fallback:
                destination:
                  host: demo
                  subset: v2
                fallback:
                  destination:
                    host: demo
                    subset: v1
    - service:
        - exact: com.taobao.hsf.demoService:1.0.0
        - exact: org.apache.dubbo.UserProvider
      routedetail:
        - name: sayHello-String-method-route
          match:
            - method:
                name_match:
                  exact: "sayHello"
          #                  argp:
          #                    - string
          route:
            - destination:
                host: demo
                subset: v1
              fallback:
                destination:
                  host: demo
                  subset: v2
                fallback:
                  destination:
                    host: demo
                    subset: v3

        - name: sayHello-method-route
          match:
            - method:
                name_match:
                  exact: "s-method"
          route:
            - destination:
                host: demo
                subset: v2
              fallback:
                destination:
                  host: demo
                  subset: v3
        - name: some-method-route
          match:
            - method:
                name_match:
                  exact: "some-method"
          route:
            - destination:
                host: demo
                subset: v4

        #        - name: interface-route
        #          route:
        #            - destination:
        #              host: demo
        #              subset: v3
        - name: final
          match:
            - method:
                name_match:
                  exact: "GetUser"

          route:
            - destination:
                host: demo
                subset: v1
              fallback:
                destination:
                  host: demo
                  subset: v2
                fallback:
                  destination:
                    host: demo
                    subset: v3
            - destination:
                host: demo
                subset: v3
              fallback:
                destination:
                  host: demo
                  subset: v2
                fallback:
                  destination:
                    host: demo
                    subset: v1
