config/testdata/router_config_error.yml
# dubbo router yaml configure file
priority: 1
force: true
noConditions :
  - "a => b"
  - "c => d"
